<resources>
    <string name="app_name">Medicine Search</string>
    <string name="search_medicine">Search medicine</string>
    <string name="type_here">Type here to search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="medicene">Medicine</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="owner">Единая справочная служба i-1069</string>
    <string name="email_holder">E-mail:</string>
    <string name="email">izzatbek7471@gmail.com</string>
    <string name="site_holder">Website:</string>
    <string name="web_site">www.i-1069.uz</string>
    <string name="phone_holder">Phone:</string>
    <string name="phone_number">+998-71-232-8667</string>
    <string name="about_app">О программе</string>
    <string name="about_developers">Разработчики приложения</string>
    <string name="all">All:</string>
    <string name="clear">Clear</string>
    <string name="found">Found</string>
</resources>